docs/5.8/ai-management/ai-studio/core-concepts.mdx
---
title: "What is AI Studio?"
description: "Introduction to Tyk AI Studio - comprehensive AI management platform"
keywords: "AI Studio, AI Management, Introduction"
sidebarTitle: "What is AI Studio?"
canonical: "https://tyk.io/docs/docs/5.8/ai-management/ai-studio/core-concepts"
---

Tyk AI Studio is a comprehensive platform that enables organizations to manage, govern, and deploy AI applications with enterprise-grade security, control, and observability. Before diving into installation and configuration, let's understand what AI Studio offers and its core concepts.

## Key Components & Philosophy

Tyk AI Studio is designed as a secure, observable, and extensible gateway for interacting with Large Language Models (LLMs) and other AI services. Key architectural pillars include:

*   **[AI Gateway](/docs/5.8/ai-management/ai-studio/proxy):** The central gateway managing all interactions between your applications and various LLM providers. It enforces policies, logs activity, and handles vendor abstraction.
*   **AI Portal:** Empowers developers with a curated catalog of AI tools and services for faster innovation.
*   **[Chat](/docs/5.8/ai-management/ai-studio/chat-interface):** Provides a secure and interactive environment for users to engage with LLMs, leveraging integrated tools and data sources.
*   **[User Management & RBAC](/docs/5.8/ai-management/ai-studio/user-management):** Securely manages users, groups, and permissions. Access to resources like LLMs, Tools, and Data Sources is controlled via group memberships.
*   **Extensibility ([Tools](/docs/5.8/ai-management/ai-studio/tools) & [Data Sources](/docs/5.8/ai-management/ai-studio/datasources-rag)):** Allows integrating external APIs (Tools) and vector databases (Data Sources) into LLM workflows (e.g., for Retrieval-Augmented Generation - RAG).
*   **Policy Enforcement ([Filters](/docs/5.8/ai-management/ai-studio/filters)):** Intercept and modify LLM requests/responses using custom scripts to enforce specific rules or data transformations.
*   **Configuration over Code:** Many aspects like LLM parameters, Filters, and [Budgets](/docs/5.8/ai-management/ai-studio/budgeting) are configured through the UI/API rather than requiring code changes.
*   **Security First:** Features like [Secrets Management](/docs/5.8/ai-management/ai-studio/secrets), [SSO integration](/docs/5.8/ai-management/ai-studio/sso), and fine-grained access control are integral to the platform.
*   **Observability:** Includes systems for [Analytics & Monitoring](/docs/5.8/ai-management/ai-studio/analytics) and [Notifications](/docs/5.8/ai-management/ai-studio/notifications) to track usage, costs, and system events.

## Core Entities

Understanding these entities is crucial:

*   **[User](/docs/5.8/ai-management/ai-studio/user-management#core-concepts):** Represents an individual interacting with Tyk AI Studio, managed within the User Management system.
*   **[Group](/docs/5.8/ai-management/ai-studio/user-management#core-concepts):** Collections of users, the primary mechanism for assigning access rights to resources via RBAC.
*   **[API Key](/docs/5.8/ai-management/ai-studio/user-management#core-concepts):** Credentials generated by Users to allow applications or scripts programmatic access to Tyk AI Studio APIs (like the Proxy), inheriting the User's permissions.
*   **[LLM Configuration](/docs/5.8/ai-management/ai-studio/llm-management):** Represents a specific LLM provider and model setup (e.g., OpenAI GPT-4, Anthropic Claude 3), including parameters and potentially associated [pricing](/docs/5.8/ai-management/ai-studio/llm-management) and [budgets](/docs/5.8/ai-management/ai-studio/budgeting).
*   **[Tool](/docs/5.8/ai-management/ai-studio/tools):** Definitions of external APIs (via OpenAPI spec) that can be invoked by LLMs during chat sessions to perform actions or retrieve external data.
*   **[Data Source](/docs/5.8/ai-management/ai-studio/datasources-rag):** Connections to vector databases or other data repositories used for Retrieval-Augmented Generation (RAG) within chat sessions.
*   **[Catalogue](/docs/5.8/ai-management/ai-studio/tools) ([Tools](/docs/5.8/ai-management/ai-studio/tools) / [Data Sources](/docs/5.8/ai-management/ai-studio/datasources-rag)):** Collections that group related Tools or Data Sources for easier management and assignment to Groups for access control.
*   **[Secret](/docs/5.8/ai-management/ai-studio/secrets):** Securely stored credentials (API keys, tokens) referenced indirectly (e.g., `$SECRET/MY_KEY`) in configurations like LLMs, Tools, or Data Sources.
*   **[Filter](/docs/5.8/ai-management/ai-studio/filters):** Custom logic (using Tengo scripts) associated with specific execution points (e.g., pre/post LLM request) to intercept and modify requests/responses.

## Getting Started

Now that you understand the core concepts, you're ready to begin your AI Studio journey:

1. **[Choose your installation method](/docs/5.8/ai-management/ai-studio/quickstart)**: Docker/Packages (recommended) or Kubernetes
2. **[Complete first-time setup](/docs/5.8/ai-management/ai-studio/configuration)**: Register your admin user and configure your first LLM
3. **Explore the platform**: Start with the chat interface and gradually explore advanced features



    <Note>
    **Ready to start?** Head to the [Installation Guide](/docs/5.8/ai-management/ai-studio/quickstart) to get AI Studio up and running in minutes.
    </Note>

